test/1.4/errors/T_EFUNARRAY.dml
/*
  © 2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

method init() {
    /// ERROR EFUNARRAY
    local void (arr[3])(void);
}
